# HW1-ABC

./: Animal.cpp  Animal.vcxproj  Animal.vcxproj.filters  CMakeLists.txt  Creation.cpp  Creation.h  beast.cpp  beast.h  bird.cpp  bird.h  container.cpp  container.h  fish.cpp  fish.h  rnd.cpp  rnd.h  tests.rar  пояснительная записка.txt
